# learning-record-store

./: .dockerignore  .env.example  .gitignore  404.html  AGENTS.md  CLAUDE.md  CONTENT-GENERATION-GUIDE.md  Dockerfile  Makefile  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: launch.json
about/: index.html
blog-posts/fable-made-me-couragious/: index.html
case-studies/: index.html
case-studies/higher-ed-summary/: index.html
chapters/: index.html
chapters/01-lms-to-experience-api/: index.html
chapters/01-what-is-an-ibook-lrs/: index.html
chapters/02-anatomy-of-xapi-statement/: index.html
chapters/03-ieee-standardization-xapi-cmi5/: index.html
chapters/04-standards-governance-ecosystem/: index.html
chapters/05-system-context-architectural-planes/: index.html
chapters/06-multi-tenancy-rosters-identity/: index.html
chapters/07-property-graph-data-model/: index.html
chapters/08-summary-vertices-ingestion/: index.html
chapters/09-twelve-core-lrs-functions/: index.html
chapters/10-choosing-technology-stack/: index.html
chapters/11-adrs-and-capacity-model/: index.html
contact/: index.html
course-description/: index.html
css/: mascot.css
dashboards/: Makefile  README.md  admin_app.py  author_app.py  requirements.txt  teacher_app.py
deploy/: docker-compose.yml
docs/: about.md  course-description.md  glossary.md  index.md
docs/css/: extra.css  (+2 more)
glossary/: index.html
js/: katex.js  lrs-xapi.js
learning-graph/: color-config.json  index.html  learning-graph.json
license/: index.html
logs/: case-study-analysis.md  chapter-content-generator-2026-07-17.md  flowchart-lr-and-td-analysis.md  mvp-status.md  quiz-generator-2026-07-16.md  watcher-fix.md
scripts/: smoke.sh
search/: search_index.json
sims/: index.html
stories/: index.html
tests/: test_producer_contract.py
(+954 files in other folders)
