[project]
name = "lrs"
version = "0.1.0"
description = "Learning Record Store — xAPI ingestion, statement compression, and graph analytics"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "CC-BY-NC-SA-4.0" }

dependencies = [
    # Gateway / identity / APIs
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Stream workers — confluent-kafka, not Faust/Spark: the work is
    # per-statement enrichment, not a shuffle (design ADR-007).
    "confluent-kafka>=2.6",
    # Stores
    "clickhouse-connect>=0.8",
    "neo4j>=5.26",
    "redis>=5.2",
    "psycopg[binary]>=3.2",
    # CLI + config
    "typer>=0.15",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # UUIDv7 for statement ids — sorts by time (design §5.1).
    # Not in the 3.12 stdlib.
    "uuid6>=2024.7",
    "httpx>=0.28",
]

# ADR-005: one image, many roles. The role is an argument, not a build.
# This entry point is what makes `ENTRYPOINT ["lrs"]` resolve — it is
# assumed throughout lrs-design-v1.md §8 but written down nowhere in it.
[project.scripts]
lrs = "lrs.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "testcontainers>=4.9",
    "ruff>=0.8",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lrs"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Test names cite spec requirement IDs (test_c1_*, test_c3_*) so a spec
# change that breaks a constraint fails CI by name.
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
packages = ["lrs"]
strict = true
